# Tetris

./: .gitignore  CMakeLists.txt  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  Application.mk  Board.cpp  Board.h  CMakeLists.txt  Figure.cpp  Figure.h  Game.cpp  Game.h  Melodies.cpp  Melodies.h  SoundManager.h  Text.cpp  Text.h  Tone.cpp  Tone.h  main.cpp
app/src/main/res/values/: strings.xml
